# tricycle_mobile_robot

./: README.md  randomWaypoints.sh  runController.sh  runGazeboAndRviz.sh
controller/: CMakeLists.txt  package.xml
controller/launch/: waypoint_tracking_controller.launch
controller/src/: controller_node.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: random_waypoint_pub.pc  tricycle_mobile_robot.pc  waypoint_tracking_controller.pc
devel/lib/random_waypoint_pub/: randomWaypointsPub
devel/lib/waypoint_tracking_controller/: controller_node
devel/share/random_waypoint_pub/cmake/: random_waypoint_pubConfig.cmake
devel/share/tricycle_mobile_robot/cmake/: tricycle_mobile_robotConfig.cmake
devel/share/waypoint_tracking_controller/cmake/: waypoint_tracking_controllerConfig.cmake
random_waypoint_pub/: CMakeLists.txt  package.xml
random_waypoint_pub/src/: randomWaypoinstPub.cpp
src/tricycle_mobile_robot/config/: tricycle_mobile_robot.yaml
src/tricycle_mobile_robot/launch/: display.launch  gazebo.launch  tricycle_mobile_robot.launch  tricycle_mobile_robot_control.launch
src/tricycle_mobile_robot/meshes/: b_wheel_left_link.STL  base_link.STL  front_wheel_link.STL
src/tricycle_mobile_robot/rviz/: tricycle_mobile_robot.rviz
src/tricycle_mobile_robot/urdf/: tricycle_mobile_robot.urdf
tricycle_mobile_robot/: CMakeLists.txt
tricycle_mobile_robot/meshes/: steer_link.STL
tricycle_mobile_robot/urdf/: tricycle_mobile_robot.csv
